[package]
name = "cargo-tess"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
serde_json = "1.0"
petgraph = "0.6"
walkdir = "2.3"
clap = "4.4"
bincode = "1.3"
indicatif = "0.15"
colored = "2.0"
cargo_metadata = "0.12"
tempfile = "3.2"
flate2 = "1.0"
tar = "0.4"