[package]
name = "cargo-tess"
description = "A cargo subcommand to build your project on a remote tesseract server"
license = "MIT"
version = "0.2.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
cargo_metadata = "0.15"
clap = { version = "4.3", features = ["derive"] }
colored = "2.0"
indicatif = "0.17"
walkdir = "2.3"
tempfile = "3.3"
flate2 = "1.0"
tar = "0.4"
regex = "1.9"

[[bin]]
name = "cargo-tess"
path = "src/main.rs"